feat: break code for modules and set dependencies

--- a/package.json
+++ b/package.json
@@ -119,5 +119,5 @@
   "bugs": {
     "url": "https://github.com/Lireien/Virtual-Keyboard/issues"
   },
-  "homepage": "https://github.com/Lireien/Virtual-Keyboard#readme"
+  "homepage": "https://lireien.github.io/Virtual-Keyboard/"
 }
